# nr-oai-pmh-harvester

./: .gitignore  pyproject.toml  pytest.ini
.github/workflows/: main.yml
nr_oai_pmh_harvester/: config.py  endpoint_handlers.py  parser.py  post_processors.py  query.py  utils.py
nr_oai_pmh_harvester/rules/nusl/: field001.py  field020.py  field022__a.py  field035.py  field04107.py  field046__j.py  field046__k.py  field24500.py  field24630.py  field24633.py  field260__b.py  field300.py  field336__a.py  field4900.py  field502__c.py  field520.py  field540.py  field586.py  field598__a.py  field65007.py  field65017.py  field650_7.py  field653.py  field656_7a.py  field7102.py  field7112.py  field720.py  field7731.py  field85640.py  field85642u.py  field909COo.py  field970__a.py  field980__a.py  field996.py  field998.py  field999C1.py
nr_oai_pmh_harvester/rules/uk/: dc_contributor_advisor.py  dc_contributor_referee.py  dc_creator.py  dc_date_issued.py  dc_description_department_cs_CZ_value.py  dc_description_faculty_cs_CZ_value.py  dc_identifier_uri.py  dc_publisher_cs_CS_value.py  dc_publisher_cs_CZ_value.py  dc_subject.py  dc_title.py  dc_type_cs_CZ_value.py  dcterms_dateAccepted_value.py  thesis_grade_cs_cs_CZ_value.py  uk_degree_discipline_cs_cs_CZ_value.py  uk_degree_program_cs_cs_CZ_value.py  uk_file_availability_value.py  uk_publication_place_cs_CZ_value_2.py
nr_oai_pmh_harvester/rules/utils/: __init__.py  study_field.py
scripts/: get_xml_nusl.py  get_xml_uk.py
tests/: conftest.py  test_parser.py  test_post_processors.py  test_query.py  test_synchronization.py  test_taxonomy_query.py  test_transform.py
tests/data/: 10.xml  112967.xml  11720.xml  120575.xml  120757.xml  1214.xml  136184.xml  151768.xml  18.xml  187483.xml  189035.xml  19263.xml  19317.xml  19329.xml  19456.xml  19535.xml  201067.xml  203270.xml  203553.xml  203578.xml  20925.xml  20926.xml  20_500_11956-103772.xml  20_500_11956-111006.xml  20_500_11956-117501.xml  20_500_11956-120544.xml  20_500_11956-123581.xml  20_500_11956-15756.xml  20_500_11956-17164.xml  20_500_11956-22764.xml  20_500_11956-26677.xml  20_500_11956-26946.xml  20_500_11956-26955.xml  20_500_11956-3256.xml  20_500_11956-3265.xml  20_500_11956-36432.xml  20_500_11956-36990.xml  20_500_11956-37506.xml  20_500_11956-40528.xml  20_500_11956-41059.xml  (+30 more)
tests/test_rules/: test_502__c.py
tests/test_rules/nusl/: test_24500.py  test_502__c.py  test_field04107.py
tests/test_rules/uk/: test_date_issued.py  test_subject.py  tests_others_identifier.py
