[tool]
[tool.poetry]
name = "nr-oai-pmh-harvester"
version = "1.0.0a1"
description = "Czech National Repository oai-pmh-harvester"
license = "MIT"
keywords = ["Czech", "National", "Respository", "Invenio", "harvester", "oai", "pmh"]
authors = ["Daniel Kopecký <Daniel.Kopecky@techlib.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
oarepo-oai-pmh-harvester = "^2.0.0-alpha.6"
oarepo = { version = "^3.3", optional = true }
pytest = { version = "^5.0.0", optional = true }
pytest-cov = { version = "^2.10.1", optional = true }
xmltodict = "^0.12.0"
nr-taxonomies = {git = "https://github.com/Narodni-repozitar/nr-taxonomies.git", optional = true, branch = "master"}
oarepo-taxonomies = "^2.5.2"

[tool.poetry.extras]
tests = ["oarepo", "pytest", "pytest-cov", "nr-taxonomies"]

[tool.poetry.plugins."oarepo_oai_pmh_harvester.parsers"]
"parsers" = "nr_oai_pmh_harvester.parser"

[tool.poetry.plugins."oarepo_oai_pmh_harvester.rules"]
"field001" = "nr_oai_pmh_harvester.rules.nusl.field001"

